--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>List App</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <title>FTC Rulebook</title>
 
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"/>
     <link rel="stylesheet" href="css/style.css" />
