--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>FTC Rulebook</title>
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"/>
     <link rel="stylesheet" href="css/style.css" />
