--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>FTC Rulebook</title>
-    <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
 
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"/>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
+    <link rel="icon" type="image/x-icon" href="http://adambusch.me/favicon.ico" />
 
 </head>
 <body id="page_body">
