--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
 <article data-role="content" id="mainList">
     <ul data-role="listview" data-filter="true" data-filter-placeholder="Search..." id="listView"></ul>
 </article>
+
+    <footer data-role="footer" id = "footer">
+        <h1>Information as of <a href="https://firstinspiresst01.blob.core.windows.net/ftc/game-manual-part-2.pdf"> 1.2: 9.19.2016</a></h1>
+    </footer>
 </div> <!-- Page !-->
 
 <script src = "js/loadRules.js"></script>
+
+
 
 </body>
 </html>
