--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body id="page_body">
 
-<div data-role="page" id="home" data-theme="b"><!-- Page !-->
+<div data-role="page" id="home" data-theme="b"><!-- Page 1 !-->
 <header data-role="header">
     <h1>FTC Rulebook</h1>
 </header>
