--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <footer data-role="footer" id = "footer">
         <h1>Information as of <a href="https://firstinspiresst01.blob.core.windows.net/ftc/game-manual-part-2.pdf"> 1.2: 9.19.2016</a></h1>
     </footer>
-</div> <!-- Page !-->
+</div> <!-- Page 1 !-->
 
 <script src = "js/loadRules.js"></script>
 
